--- a/css/styles.css
+++ b/css/styles.css
@@ -1,35 +1,45 @@
 body {
   font-family: 'Montserrat', sans-serif;
+  text-align: center;
 }
 
-h1 {
-  font-size: 3.5rem;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: 900;
-  line-height: 1.5;
-}
-
-h2 {
-  font-size: 3rem;
-  font-weight: bold;
-  line-height: 1.5;
-}
-
-h3 {
-  font-size: 1.5rem;
-  font-weight: 700;
 }
 
 p {
   color: #8f8f8f;
 }
 
-#title {
+/* Headings */
+.big-heading {
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+.section-heading {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+/* Containers */
+.container-fluid {
+  padding: 7% 15%;
+}
+
+/* Sections */
+.colored-section {
   background-color: #ff4c68;
   color: #fff;
 }
 
-.container-fluid {
-  padding: 3% 15% 7%;
+.white-section {
+  background-color: #fff;
 }
 
 /* Navigation Bar */
@@ -52,6 +62,12 @@ p {
   font-weight: 300;
 }
 
+/* Title section */
+#title .container-fluid {
+  padding: 3% 15% 7%;
+  text-align: left;
+}
+
 /* Download buttons */
 .download-button {
   margin: 5% 3% 5% 0;
@@ -66,13 +82,11 @@ p {
 
 /* Features section */
 #features {
-  padding: 7% 15%;
   background: white;
   position: relative;
 }
 
 .feature-box {
-  text-align: center;
   padding: 3%;
 }
 
@@ -85,15 +99,18 @@ p {
   color: #ff4c68;
 }
 
+.feature-title {
+  font-size: 1.5rem;
+}
+
 /* Testimonial section */
 #testimonials {
-  color: #fff;
-  text-align: center;
   background-color: #ef8172;
 }
 
-.carousel-item {
-  padding: 7% 15%;
+.testimonial-text {
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 .testimonial-image {
@@ -103,7 +120,6 @@ p {
 }
 
 #press {
-  text-align: center;
   background-color: #ef8172;
   padding-bottom: 3%;
 }
@@ -116,33 +132,18 @@ p {
 /* Pricing Section */
 #pricing {
   padding: 100px;
-  text-align: center;
+}
+
+.price-text {
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 .pricing-column {
   padding: 3% 2%;
 }
 
-/* Call to action section */
-#cta {
-  background-color: #ff4c68;
-  text-align: center;
-  padding: 7% 15%;
-}
-
-#cta h3 {
-  font-size: 3.5rem;
-  font-weight: 900;
-  color: #fff;
-  line-height: 1.5;
-}
-
 /* Footer section */
-#footer {
-  text-align: center;
-  padding: 7% 15%;
-}
-
 #footer i {
   padding: 20px 10px;
 }
